@@ -3,6 +3,8 @@ Revision history for Mojolicious-Plugin-LinkEmbedder
 0.11
        * Fix Video::Dbtv iframe src
        * Fix handling https://www.youtube.com/user/jsconfeu
+       * Add support for git.io links
+       * Add support for github commit messages
 
 0.10     Fri Oct 17 14:07:37 2014
        * Add LinkEmbedder::Text::Github
